fixed horizontal scroll on ios

--- a/sass/components/_frame-carousel.scss
+++ b/sass/components/_frame-carousel.scss
@@ -2,6 +2,7 @@
   display: flex;
   height: calc(100vh - 3.5em);
   overflow-x: scroll;
+  -webkit-overflow-scrolling: touch;
   margin-top: 2em;
   .card {
     height: calc(100vh - 64px);
